--- a/lcl/languages/lclstrconsts.fr.po
+++ b/lcl/languages/lclstrconsts.fr.po
@@ -696,7 +696,9 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Contexte d'aide %s non trouvé dans la base de données %s%s%s."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+#, fuzzy
+#| msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not found a viewer for a help page of type %s"
 msgstr "La base de données d'aide %s%s%s n'a pas trouvé une visionneuse pour une page d'aide du type %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
