--- a/lcl/languages/lclstrconsts.ja.po
+++ b/lcl/languages/lclstrconsts.ja.po
@@ -688,7 +688,9 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "ヘルプコンテキスト %s をデータベース %s%s%s から見つけることができませんでした。"
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+#, fuzzy
+#| msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not found a viewer for a help page of type %s"
 msgstr "ヘルプデータベース %s%s%s のヘルプページタイプ %s に対するビューアが見つかりません"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
