--- a/lcl/languages/lclstrconsts.ru.po
+++ b/lcl/languages/lclstrconsts.ru.po
@@ -684,7 +684,9 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Контекст справки %s не найден в базе данных \"%s\"."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+#, fuzzy
+#| msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not found a viewer for a help page of type %s"
 msgstr "База данных справки %s%s%s не нашла программу просмотра для страницы справки типа %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
