--- a/lcl/languages/lclstrconsts.uk.po
+++ b/lcl/languages/lclstrconsts.uk.po
@@ -691,7 +691,9 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Контекст довідки %s не знайдено в базі %s%s%s."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+#, fuzzy
+#| msgid "Help Database %s%s%s did not found a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not found a viewer for a help page of type %s"
 msgstr "База даних довідки %s%s%s не знайшла програму перегляду для сторінки довідки типу %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
